--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a  class="logo">AR Sany</a>
+                <a class="logo">
+                  <span>A</span>
+                  <span>R</span>
+                  <span> </span>
+                  <span>S</span>
+                  <span>a</span>
+                  <span>n</span>
+                  <span>y</span>
+                </a>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
