--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR Sany - Senior Network Engineer</title>
+    <title>AR Sany - Senior Network Engineer </title>
     <link rel="icon" type="image/x-icon" href="src/favicon.ico" alt="AR Sany smiling in professional attire, facing forward, with a calm and confident expression; background features subtle network-themed graphics and the text AR Sany - Senior Network Engineer displayed clearly">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="src/style.css">
@@ -315,8 +315,8 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <div class="timeline-date">2024 – Present</div>
-                        <h3>Senior Support Engineer</h3>
-                        <h4>OneSky Communications LTD.</h4>
+                        <h3>Senior Support Engineer | NOC Department</h3>
+                        <h4>OneSky Communications LTD. </h4>
                         <ul>
                             <li>Lead and mentor NOC engineers, fostering a culture of technical excellence.</li>
                             <li>Oversee daily NOC operations, ensuring high network availability and performance.</li>
@@ -328,8 +328,8 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <div class="timeline-date">2023 – 2024</div>
-                        <h3>Support Engineer</h3>
-                        <h4>OneSky Communications LTD. | NOC Department</h4>
+                        <h3>Support Engineer | NOC Department</h3>
+                        <h4>OneSky Communications LTD. </h4>
                         <ul>
                             <li>Implemented robust network solutions to ensure SLA compliance.</li>
                             <li>Optimized network infrastructure using advanced monitoring tools.</li>
