--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
       </p>
       <div class="modern-hero-btns">
         <a href="#contact" class="modern-btn primary"><i class="fas fa-envelope"></i> Get In Touch</a>
-        <a href="src/AR SanyCV.pdf" class="modern-btn" target="_blank"><i class="fas fa-download"></i> Download Resume</a>
-      </div>
+        <a id="downloadResume" href="src/AR SanyCV.pdf" class="modern-btn" target="_blank" rel="noopener noreferrer"><i class="fas fa-download"></i> Download Resume</a>
+        <!-- Toast container (for download confirmation) -->
+        <div id="toastContainer" class="toast-container" aria-live="polite" aria-atomic="true"></div>
+    </div>
       <div class="modern-hero-socials">
         <a href="https://linkedin.com/in/amanur-rahman-sany" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://github.com/amanurrahmansany" target="_blank"><i class="fab fa-github"></i></a>
@@ -586,3 +588,4 @@
 <script src="src/script.js"></script>
 </body>
 </html>
+
