--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             </nav>
         </div>
     </header>
-
+    <!--- Prevent right-click context menu -->     
+    <body oncontextmenu="return false;"></body>
     <!-- Hero Section -->
     <section id="home" class="modern-hero">
   <div class="modern-hero-container">
