--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR Sany - Senior Network Engineer </title>
+    <title>AR Sany - Senior Support Engineer </title>
     <link rel="icon" type="image/x-icon" href="src/favicon.ico" alt="AR Sany smiling in professional attire, facing forward, with a calm and confident expression; background features subtle network-themed graphics and the text AR Sany - Senior Network Engineer displayed clearly">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="src/style.css">
