--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-   <!--- Prevent right-click context menu -->     
+   <!--- Prevent right-click, drag, and context menu -->     
     <body oncontextmenu="return false;"></body>
+    <!-- prevent drag and text selection 
+        onselectstart="return false;" 
+      ondragstart="return false;"></body> -->     
     <!-- Header -->
     <header>
         <div class="container">
