--- a/index-30.html
+++ b/index-30.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR Sany - Senior Support Engineer </title>
-    <link rel="icon" type="image/x-icon" href="src/favicon.ico">
-    <meta name="description" content="Amanur Rahman Sany — Senior Support Engineer. Portfolio showcasing network engineering, automation, and projects.">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="src/favicon.ico" alt="AR Sany smiling in professional attire, facing forward, with a calm and confident expression; background features subtle network-themed graphics and the text AR Sany - Senior Network Engineer displayed clearly">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-    <!-- Header -->
+   <!--- Prevent right-click, drag, and context menu -->     
+    <body oncontextmenu="return false;"></body>
+    <!-- prevent drag and text selection 
+        onselectstart="return false;" 
+      ondragstart="return false;"></body> -->     
     <!-- Header -->
     <header>
         <div class="container">
