--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="src/style.css">
 </head>
-<body>
-    <!-- Header -->
-    <!-- Header -->
+<body oncontextmenu="return false;">
+        <!-- Prevent right-click (context menu) on the whole page. -->
+        <!-- Note: disabling context menu can affect accessibility and is easily bypassed. Consider removing this or using JS only where needed. -->
+        <!-- Header -->
     <header>
         <div class="container">
             <nav class="navbar">
