--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="src/style.css">
 </head>
-<body oncontextmenu="return false;">
+<body >
         <!-- Prevent right-click (context menu) on the whole page. -->
         <!-- Note: disabling context menu can affect accessibility and is easily bypassed. Consider removing this or using JS only where needed. -->
         <!-- Header -->
